# esp32_project

./: .gitignore  CMakeLists.txt  README.md  sdkconfig.old  teste.py
main/: CMakeLists.txt  app_main.c  bpm_sensor.c  bpm_sensor.h  dht11.c  dht11.h  json_parser.c  json_parser.h  ligaTela.c  ligaTela.h  luzQuarto.c  luzQuarto.h  mqtt.c  mqtt.h  ports.h
main/mqtt/: json_parser.c  json_parser.h  mqtt.c  mqtt.h
main/sensores/dht11/: dht11.c  dht11.h
main/sensores/encoder/: rotary_encoder.c  rotary_encoder.h
main/sensores/ky039/: ky039.c  ky039.h
main/sensores/luzQuarto/: luzQuarto.c  luzQuarto.h
smartwatch/: CMakeLists.txt
smartwatch/main/: Kconfig.projbuild
