idf_component_register(
    SRCS 
    "./mqtt/mqtt.c"
    "./wifi/wifi.c"
    "app_main.c"
    "./sensores/luzQuarto/luzQuarto.c"
    "./sensores/ligaTela/ligaTela.c"
    "./mqtt/json_parser.c"
    "./sensores/dht11/dht11.c"
    "./sensores/encoder/rotary_encoder.c"
    "./sensores/ky039/ky039.c"
    "./sensores/ky039/adc_module.c"
                    
    INCLUDE_DIRS 
    "."
    "./mqtt/"
    "./wifi/"
    "./sensores/ligaTela/"
    "./sensores/luzQuarto/"
    "./sensores/dht11/"
    "./sensores/encoder/"
    "./sensores/ky039/"
)